update world logo and remove avax

--- a/docs/wallet/bundler/3-rpc-endpoints.mdx
+++ b/docs/wallet/bundler/3-rpc-endpoints.mdx
@@ -64,7 +64,7 @@ export const chainList = [
   },
   {
     network: "Worldchain",
-    logo: "/img/tokens/world-logo.svg",
+    logo: "/img/networks/480.svg",
     chainId: 480,
     chainHandle: "worldchain",
     address: "Available on Dashboard",
