fix comment in recovery alert

--- a/docs/wallet/plugins/5-recovery-alerts-guide.mdx
+++ b/docs/wallet/plugins/5-recovery-alerts-guide.mdx
@@ -60,7 +60,7 @@ BUNDLER_URL=https://api.candide.dev/public/v3/11155111
 PAYMASTER_URL=https://api.candide.dev/public/v3/11155111
 
 # Recovery Service URL
-# Contact us to get access: https://app.formbricks.com/s/brdzlw0t897cz3mxl3ausfb5
+# Get access here: https://app.formbricks.com/s/brdzlw0t897cz3mxl3ausfb5
 RECOVERY_SERVICE_URL=
 
 # Safe Owner
