add plasma support

--- a/docs/wallet/bundler/3-rpc-endpoints.mdx
+++ b/docs/wallet/bundler/3-rpc-endpoints.mdx
@@ -62,6 +62,14 @@ export const chainList = [
     address: "Available on Dashboard",
     type: "Bundler",
   },
+    {
+    network: "Plasma",
+    logo: "/img/networks/9745.svg",
+    chainId: 9745,
+    chainHandle: "plasma",
+    address: "Available on Dashboard",
+    type: "Bundler",
+  },
   {
     network: "Worldchain",
     logo: "/img/networks/480.svg",
