Add avalanche support

--- a/docs/wallet/bundler/3-rpc-endpoints.mdx
+++ b/docs/wallet/bundler/3-rpc-endpoints.mdx
@@ -15,6 +15,12 @@ export const chainList = [
     chainHandle: "arbitrum",
   },
   {
+    network: "Avalanche C-Chain",
+    logo: "/img/networks/43114.png",
+    chainId: 43114,
+    chainHandle: "avalanche",
+  },
+  {
     network: "Base",
     logo: "/img/networks/8453.png",
     chainId: 8453,
