--- a/docs/wallet/paymaster/1-tokens-supported.mdx
+++ b/docs/wallet/paymaster/1-tokens-supported.mdx
@@ -9,6 +9,7 @@ import { plasmaList } from "../../../src/data/tokens-list";
 import { PaymasterSupportedToken } from "/src/components/CustomTable";
 import {
     arbitrumList,
+    avalancheList,
     baseList,
     bscList,
     polygonList,
@@ -35,6 +36,9 @@ If you would like to see a token or network supported, reach out on Discord or e
 
 ### Arbitrum
 <PaymasterSupportedToken items={arbitrumList}/>
+
+### Avalanche
+<PaymasterSupportedToken items={avalancheList}/>
 
 ### Base
 <PaymasterSupportedToken items={baseList}/>
